Issue #3000014 by mhawwari: Fix Better Login Input Label Alignment

--- a/VARTHEME_SUBTHEME/less/theme/betterlogin.theme.less
+++ b/VARTHEME_SUBTHEME/less/theme/betterlogin.theme.less
@@ -8,7 +8,6 @@
 
 #auth-box {
   padding: @navbar-height 0 0;
-  text-align: center;
 
   h1#the-logo {
     text-align: center;
@@ -37,6 +36,7 @@
   #bottom-part {
     font-size: 13px;
     padding: 15px 0 0;
+    text-align: center;
   }
 
   .user-form {
@@ -65,5 +65,13 @@
 
   .user-login-form {
     text-align: left;
+  }
+
+  .form-actions {
+    text-align: center;
+  }
+ 
+  .block-social-auth-login {
+    text-align: center;
   }
 }
