--- a/css/base/vartheme.base.css
+++ b/css/base/vartheme.base.css
@@ -575,9 +575,6 @@ div.features-export-list .form-type-checkbox input[type=checkbox] {
 #admin-menu-search .form-control {
   float: auto;
 }
-.form-control {
-  max-width: 400px;
-}
 .form-textarea-wrapper textarea {
   max-width: 100%;
 }
